manager/stylesheet.css
body{
	font-size:18px;
	padding-top:2%;
}

input{
	text-align:center;
}

.frame{
	margin-top:0px;
	padding:3% 13%;
}

#college,#name,#number{
	display:inline-block;
}

#name{
	width:20%;
}

#number{
	width:20%;
}

.groupTag{
	color:#fff;
	border: 1px solid #efefef;
    float: right;
    padding: 5px 20px;
    margin-top: -15px;
    border-bottom-color: #fff;
}

.position{
	display:inline-block;
	margin-right:30px;
	margin-top:8px;
}

hr{
	margin-bottom:7px;
}

@media(min-width:1200px){
	.collegeSpna{
		margin-left:1%;
	}
}

@media(max-width:1199px){
	.collegeSpan,.nameSpan,.numberSpan{
		display:block;
		margin-bottom:1%;
		margin-left: 11%;
	}
	.info select{
		width:70%;
	}
	.info input{
		width:70%!important;
	}
}

@media(max-width:500px){
	.collegeSpan,.nameSpan,.numberSpan{
		display:block;
		margin-bottom:1%;
		margin-left: 2%;
	}
	.info select{
		width:70%;
	}
	.info input{
		width:70%!important;
	}
	.frame h3{
		font-size:20px;
		margin-bottom:10%!important;
	}

}


@media(max-width:350px){
	.fetch h1{
		font-size:20px!important;
	}
}


.frame h3{
	text-align:center;
	margin-top: -2%;
	margin-bottom: 4%;
}

.fetch{
	width:100%;
	text-align:center;
	color:#000;
	font-family:helvetica;
	padding:10%;
}

@media(min-width:900px){
	.fetch h1{
		font-size:65px!important;
	}
}

